# ezwin

./: CMakeLists.txt  LICENSE  README.md
cmake/: config.h.in
include/ezwin/: config.h  ezwin.h
src/: config.h  defines.h  platform.h
src/ezwin/: ezwin.c
src/platform/x11/: x11interface.c  x11interface.h  x11state.h
src/utility/log/: log.h
src/utility/poll/: posix_poll.c  posix_poll.h
src/utility/timer/: posix_time.c  timer.h
